Landing fix for bug 323156. XPCDispConvert::JSArrayToCOMArray does not convert empty arrays correctly. Patch by gdavis@nsisoftware.com, r=dbradley@gmail.com, sr=jst@mozilla.org